--- a/2019-03/client/src/App.css
+++ b/2019-03/client/src/App.css
@@ -75,7 +75,13 @@ form input[type=submit]{
   background-color: rgb(47, 66, 235);
 }
 
-@media (max-width: 500px) { 
+@media (max-width: 500px) {
   h1{font-size:18px;}
   #container{width: calc(80% - 30px);}
+}
+
+#footer {
+  text-align: right;
+  font-size:10px;
+  padding: 10px 25px;
 }
